updated HTML structure and commenced CSS styling
installed fonts from google fonts, tweaked border and columns

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <div class="date">Wednesday 11:45</div>
-        <h1>Osaka</h1>
+        <div>Wednesday 11:45</div>
+        <hr />
         <div class="row">
-          <div class="col-6">
+          <div class="col-4">
+            <h3>Currently in...</h3>
+          </div>
+          <div class="col-4">
+            <h1>Osaka</h1>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
@@ -37,15 +41,18 @@
             </div>
             <div>Partly Cloudy</div>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <div>
               <ul class="main-overview">
+                <li>Max:<span>27</span>°C</li>
+                <li>Min: <span>20</span>°C</li>
                 <li>Humidity: 77%</li>
                 <li>Wind 27 km/h</li>
               </ul>
             </div>
           </div>
         </div>
+        <hr />
         <small
           ><a
             href="https://github.com/Belzie1300/bel-weather-app-design"
