Updated CSS styling

--- a/index.html
+++ b/index.html
@@ -30,28 +30,41 @@
           </div>
           <div class="col-4">
             <h1>Osaka</h1>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="Partly Cloudy"
-              />
-              <span id="main-temp">14</span>
-              <span id="c-unit">°C</span> |
-              <span id="f-unit">°F</span>
-            </div>
-            <div>Partly Cloudy</div>
           </div>
           <div class="col-4">
             <div>
               <ul class="main-overview">
                 <li>Max:<span>27</span>°C</li>
                 <li>Min: <span>20</span>°C</li>
-                <li>Humidity: 77%</li>
-                <li>Wind 27 km/h</li>
               </ul>
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-4">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Partly Cloudy"
+            />
+            <div>Partly Cloudy</div>
+          </div>
+          <div class="col-4">
+            <div>
+              <span id="main-temp">27</span>
+              <span id="c-unit">°C</span> |
+              <span id="f-unit">°F</span>
+            </div>
+          </div>
+          <div class="col-4">
+            <div>
+              <ul class="main-overview">
+                <li>Humidity: 77%</li>
+                <li>Wind: 27 km/h</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
         <hr />
         <small
           ><a
