Planning Date Element whilst formatting from API data

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <div>Wednesday 11:45</div>
+          <div id="date">Wednesday 11:45</div>
           <hr />
           <h3>Currently in...</h3>
           <div class="row">
