Completed formatDate function and removed fake data in HTML

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <div id="date">Wednesday 11:45</div>
+          <div id="date"></div>
           <hr />
           <h3>Currently in...</h3>
           <div class="row">
@@ -35,8 +35,8 @@
             <div class="col-4">
               <div>
                 <ul class="main-overview">
-                  <li>Max:<span id="main-overview-max">27</span>°C</li>
-                  <li>Min: <span id="main-overview-min">20</span>°C</li>
+                  <li>Max:<span id="main-overview-max"></span>°C</li>
+                  <li>Min: <span id="main-overview-min"></span>°C</li>
                 </ul>
               </div>
             </div>
@@ -50,11 +50,11 @@
                   width="100px"
                 />
               </div>
-              <div id="description">Partly Cloudy</div>
+              <div id="description"></div>
             </div>
             <div class="col-4">
               <div class="d-flex weather-temperature">
-                <span class="main-temp"><strong>27</strong></span>
+                <span class="main-temp"><strong></strong></span>
                 <span class="unit">°C | <a href="#">°F</a></span>
               </div>
             </div>
@@ -62,11 +62,10 @@
               <div>
                 <ul class="main-overview">
                   <li>
-                    Humidity: <span id="humidity"><strong>77</strong></span
-                    >%
+                    Humidity: <span id="humidity"><strong></strong></span>%
                   </li>
                   <li>
-                    Wind: <span id="wind"><strong>27</strong></span> km/h
+                    Wind: <span id="wind"><strong></strong></span> km/h
                   </li>
                 </ul>
               </div>
