Linked API icon in JS

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
-              <h1>Osaka</h1>
+              <h1 class="city">Osaka</h1>
             </div>
             <div class="col-4">
               <div>
                 <ul class="main-overview">
-                  <li>Max:<span id="main-overview-max"></span>°C</li>
+                  <li>Max: <span id="main-overview-max"></span>°C</li>
                   <li>Min: <span id="main-overview-min"></span>°C</li>
                 </ul>
               </div>
@@ -44,11 +44,7 @@
           <div class="row">
             <div class="col-4 icon-summary">
               <div>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Partly Cloudy"
-                  width="100px"
-                />
+                <img src="" alt="" id="icon" width="150px" />
               </div>
               <div id="description"></div>
             </div>
@@ -61,12 +57,8 @@
             <div class="col-4">
               <div>
                 <ul class="main-overview">
-                  <li>
-                    Humidity: <span id="humidity"><strong></strong></span>%
-                  </li>
-                  <li>
-                    Wind: <span id="wind"><strong></strong></span> km/h
-                  </li>
+                  <li>Humidity: <span id="humidity"></span>%</li>
+                  <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
               </div>
             </div>
