created function to activate the submit button. Search city enabled

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                   type="search"
                   placeholder="Search a city"
                   class="form-control w-100"
+                  id="city-input"
                 />
               </div>
               <div class="col-2">
@@ -46,7 +47,7 @@
                 />
               </div>
               <div class="col-2">
-                <button class="btn btn-warning w-100">
+                <button id="current-location" class="btn btn-warning w-100">
                   <i class="fa-solid fa-location-dot"></i>
                 </button>
               </div>
@@ -57,7 +58,7 @@
           <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
-              <h1 class="city">Osaka</h1>
+              <h1 class="city"></h1>
             </div>
             <div class="col-4">
               <div>
