Made fahrenheit link active to convert to celsius

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             <div class="col-4">
               <div class="d-flex weather-temperature">
                 <span class="main-temp"><strong></strong></span>
-                <span class="unit">°C|<a href="#">°F</a></span>
+                <span class="unit"
+                  >°C|<a href="#" id="fahrenheit-link">°F</a></span
+                >
               </div>
             </div>
             <div class="col-4">
