Added celsius link and the conversion back

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
               <div class="d-flex weather-temperature">
                 <span class="main-temp"><strong></strong></span>
                 <span class="unit"
-                  >°C|<a href="#" id="fahrenheit-link">°F</a></span
+                  ><a href="#" id="celsius-link" class="active">°C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a></span
                 >
               </div>
             </div>
