--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
             </div>
           </div>
           <hr />
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="forecast-date">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/04d@2x.png"
+                  alt="Cloudy"
+                />
+                <div class="forecast-temp">
+                  <span class="forecast-max"> 18°</span>
+                  <span class="forecast-min"> 12°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small
           ><a
